# use state basic

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.border-blue {
+border-bottom-color: blue !important;
+}
+
+.border-green {
+  border-bottom-color: green !important;
+}
