--- a/src/components/UI/Modal/ErrorModal.module.css
+++ b/src/components/UI/Modal/ErrorModal.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100vh;
     z-index: 10;
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.55);
 }
 
 .modal {
@@ -15,7 +15,7 @@
     width: 80%;
     z-index: 100;
     overflow: hidden;
-    bankground-color: #fff;
+    background-color: #fff;
 }
 
 .header {
@@ -30,7 +30,6 @@
 
 .content {
     padding: 1rem;
-    background-color: #f8dfff;
 }
 
 .actions {
