--- a/src/components/Food/Meals/AvailableMeals.module.scss
+++ b/src/components/Food/Meals/AvailableMeals.module.scss
@@ -3,6 +3,8 @@
   width: 90%;
   margin: 2rem auto;
   animation: meals-appear 1s ease-out forwards;
+  background-color: whitesmoke;
+  border-radius: 14px;
 
   ul {
     list-style: none;
