--- a/src/components/routeExample/layout/MainNavigation.module.scss
+++ b/src/components/routeExample/layout/MainNavigation.module.scss
@@ -13,5 +13,11 @@
   a {
     text-decoration: none;
     color: var(--color-primary-400);
+
+    &:hover,
+    &.active {
+      color: var(--color-primary-800);
+      text-decoration: underline;
+    }
   }
 }
