--- a/src/components/routeExample/layout/EventNavigation.module.scss
+++ b/src/components/routeExample/layout/EventNavigation.module.scss
@@ -14,6 +14,7 @@
     padding: 0.5rem 1.5rem;
     border-radius: 4px;
     text-decoration: none;
+    height: 100px;
 
     &:hover,
     &:active,
